# skill

skills/0xichigo/svm/: SKILL.md  _meta.json  install.sh
skills/0xpasho/rent-my-browser/: _meta.json
skills/1322138614/anime-assistant/: SKILL.md  _meta.json
skills/1kalin/afrexai-food-truck/: _meta.json
skills/2663629531/token-risk-explainer-skill/: SKILL.md  _meta.json
skills/27555402-spec/freelancer-bidder/: SKILL.md  _meta.json
skills/4ier/feishu-contacts-sync/: _meta.json
skills/4ier/neo-browser/: SKILL.md  _meta.json
skills/737999/gridtrx/: _meta.json
skills/8421bit/wechat-article-reader/: README.md  SKILL.md  _meta.json  requirements.txt
skills/850media/frameo/: SKILL.md  _meta.json
skills/86293073/self-evolving-skill-1-0-2/: _meta.json
skills/86293073/self-reflection-1-1-1/: README.md  SKILL.md  _meta.json  self-reflection.example.json
skills/9talk/plan-i/: _meta.json
skills/aadipapp/mac-power-tools/: SKILL.md  _meta.json  power_tools.py
skills/aaron-he-zhu/content-quality-auditor/: SKILL.md  _meta.json
skills/aaron-he-zhu/performance-reporter/: SKILL.md  _meta.json
skills/abdelkrim/x-twitter-by-altf1be/: _meta.json  package-lock.json  package.json
skills/aboutyao/super-brain/: _meta.json
skills/aboutyao/team-collab-skill/: SKILL.md  _meta.json
skills/abstrct/structs-diplomacy/: SKILL.md  _meta.json
skills/abstrct/structs-energy/: _meta.json
skills/upwell/pdf-compressor/: README.md  SKILL.md  _meta.json  pyproject.toml
skills/upwell/pdf-compressor/src/: __init__.py  compressor.py  main.py  models.py  utils.py
(+2219 files in other folders)
