[project]
name = "pdf-compressor"
version = "1.0.0"
description = "Compresses a given PDF file to reduce its size."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.2",
    "pydantic>=2.0.0",
    "pymupdf>=1.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
